# EI2D-CABI-CPPwrapper

./: BeaverHoles_trial5.out  Dip56_trial1_trial1.out  backend_test.py  data_transfer_debug_test.py  debug_actual_bounds_error.py  debug_array_bounds.py  debug_fortran_minimal.py  debug_forward_modeling.py  debug_parameter_bounds.py  debug_real_mesh_params.py  debug_sensitivity_bounds.py  earthimager_results.out  earthimager_results_fixed.out  fix_bounds_error.py  fixed_ei2d_parser.py  roi_analyzer.py  roi_fixed_parser.py  test_array_bounds_fix.py  test_bounds_fix.py  test_direct_cabi.py  test_json_serialization.py  test_large_dataset.py  test_result.md  test_toy_14_dd_fixed.out  test_toy_14_dd_layered.out
.emergent/: emergent.yml  summary.txt
EI2D_CABI/: AGI EarthImager 2D.doc  Fortransupport.txt  ei2d_tree.txt  ei2d_tree_utf8.txt
backend/: earthimager_service.py  earthimager_wrapper.py  ei2d_visualization.py  server.py  validation_data.py
earthimager/: generate_all_plots.py
earthimager/cli/: CMakeLists.txt  C_ABI-inputinfo.txt
earthimager/cli/apps/ei2dcore/cwrap/: ei2d_c_api.f90
earthimager/cli/apps/ei2dcore/src/: BCFD.f90  BCFE.f90  FindAbscissa.f90  ForwPCG.f90  ForwUtils.f90  ForwardFD.f90  ForwardFE.f90  GlobalInv.f90  InvPCGOC.f90  InvUtils.f90  PrepMixBC.f90  Roughness.f90  Sensitivity.f90  SetAbscissa.f90  UpdateJacobian.f90
earthimager/cli/include/: ei2d_api.h
earthimager/examples/: sample.stg
frontend/: .env
frontend/src/: App.css  App.js
trial5/: toy-14-dd_trial5.ini  toy-14-dd_trial5.mdl  toy-14-dd_trial5.stg
(+16 files in other folders)
